# IoT_Bridge_Prometheus

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  read_sensor.py  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-publish.yml
deployment/: workload.yaml
