[project]
name = "iot-bridge-prometheus"
version = "0.1.0"
description = "IoT Bridge for Prometheus metrics collection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncer>=0.0.17",
    "fastapi[standard]>=0.135.3",
    "loguru>=0.7.3",
    "prometheus-client>=0.25.0",
    "pydantic-settings[yaml]>=2.13.1",
]
